Fix unreadable text in dark theme

--- a/app/src/less/log-view.less
+++ b/app/src/less/log-view.less
@@ -30,6 +30,14 @@
   font-size: 175%;
   font-weight: 200;
   opacity: 0.3;
+
+  .ThemeLight & {
+    color: @black;
+  }
+
+  .ThemeDark & {
+    color: @white;
+  }
 }
 
 .LogViewToolbar {
